# signal_ticket

./: .env  Dockerfile  LICENSE  database_script.py  docker-compose.yml  main.py  models.py  pyproject.toml  schema.py  ticket.py
alembic/: env.py
alembic/versions/: 08781d1630c1_new_migration.py
docs/: tasks.md
