[tool.poetry]
name = "signal-ticket"
version = "0.1.0"
description = "signal ticket for medical organisators"
authors = ["Maksakov M.D."]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
fastapi-sqlalchemy = "^0.2.1"
pydantic = "^1.10.2"
alembic = "^1.8.1"
psycopg2 = "^2.9.4"
python-dotenv = "^0.21.0"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.44"}
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
